; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_if.c_if_purgemaddrs.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_if.c_if_purgemaddrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ifnet = type { i32 }
%struct.ifmultiaddr = type { i32 }

@ifmultiaddr = common dso_local global i32 0, align 4
@ifma_link = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ifnet*)* @if_purgemaddrs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @if_purgemaddrs(%struct.ifnet* %0) #0 {
  %2 = alloca %struct.ifnet*, align 8
  %3 = alloca %struct.ifmultiaddr*, align 8
  store %struct.ifnet* %0, %struct.ifnet** %2, align 8
  %4 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %5 = call i32 @IF_ADDR_WLOCK(%struct.ifnet* %4)
  br label %6

6:                                                ; preds = %12, %1
  %7 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %8 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %7, i32 0, i32 0
  %9 = call i32 @CK_STAILQ_EMPTY(i32* %8)
  %10 = icmp ne i32 %9, 0
  %11 = xor i1 %10, true
  br i1 %11, label %12, label %25

12:                                               ; preds = %6
  %13 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %14 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %13, i32 0, i32 0
  %15 = call %struct.ifmultiaddr* @CK_STAILQ_FIRST(i32* %14)
  store %struct.ifmultiaddr* %15, %struct.ifmultiaddr** %3, align 8
  %16 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %17 = getelementptr inbounds %struct.ifnet, %struct.ifnet* %16, i32 0, i32 0
  %18 = load %struct.ifmultiaddr*, %struct.ifmultiaddr** %3, align 8
  %19 = load i32, i32* @ifmultiaddr, align 4
  %20 = load i32, i32* @ifma_link, align 4
  %21 = call i32 @CK_STAILQ_REMOVE(i32* %17, %struct.ifmultiaddr* %18, i32 %19, i32 %20)
  %22 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %23 = load %struct.ifmultiaddr*, %struct.ifmultiaddr** %3, align 8
  %24 = call i32 @if_delmulti_locked(%struct.ifnet* %22, %struct.ifmultiaddr* %23, i32 1)
  br label %6

25:                                               ; preds = %6
  %26 = load %struct.ifnet*, %struct.ifnet** %2, align 8
  %27 = call i32 @IF_ADDR_WUNLOCK(%struct.ifnet* %26)
  ret void
}

declare dso_local i32 @IF_ADDR_WLOCK(%struct.ifnet*) #1

declare dso_local i32 @CK_STAILQ_EMPTY(i32*) #1

declare dso_local %struct.ifmultiaddr* @CK_STAILQ_FIRST(i32*) #1

declare dso_local i32 @CK_STAILQ_REMOVE(i32*, %struct.ifmultiaddr*, i32, i32) #1

declare dso_local i32 @if_delmulti_locked(%struct.ifnet*, %struct.ifmultiaddr*, i32) #1

declare dso_local i32 @IF_ADDR_WUNLOCK(%struct.ifnet*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
